Correction collapse fiche logement

--- a/src/Pages/AccommodationSheet/AccommodationSheet.css
+++ b/src/Pages/AccommodationSheet/AccommodationSheet.css
@@ -1,3 +1,8 @@
+.accommodationSheetContainer {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
 .locationTitle {
   color: #ff6060;
   font-size: 36px;
@@ -5,7 +10,6 @@
   font-weight: 500;
   text-align: left;
   margin: 0px;
-  margin-left: 100px;
 }
 
 .locationLocation {
@@ -23,21 +27,22 @@
   border-radius: 10px;
   display: flex;
   align-items: center;
-  padding-left: 40px;
+
   color: white;
-  font-size: 18px;
+  font-size: 14px;
   font-family: Montserrat;
   font-weight: bold;
-  padding-right: 40px;
+
   margin-bottom: 24px;
+  padding: 0 20px;
 }
 
 .locationCollapses {
   display: flex;
+  gap: 76px;
 }
 
 .collapseDescription {
-  margin-left: 100px;
   margin-right: 76px;
 }
 
@@ -47,7 +52,7 @@
 
 .locationTags {
   display: flex;
-  margin-left: 100px;
+
   gap: 10px;
 }
 
@@ -64,7 +69,6 @@
 .titleNamePicture {
   display: flex;
   justify-content: space-between;
-  margin-right: 100px;
 }
 
 .hostPicture {
@@ -82,4 +86,8 @@
 .hostPictureBox {
   display: flex;
   align-items: center;
+}
+
+.accommodationSheetContainer .dropdownWrapper {
+  width: 50%;
 }
