--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -13,8 +13,6 @@
   display: flex;
   align-items: center;
   margin-bottom: 30px;
-  margin-left: 100px;
-  margin-right: 100px;
   margin-top: 50px;
   justify-content: center;
 }
